--- a/projects/material-file-input/package.json
+++ b/projects/material-file-input/package.json
@@ -1,9 +1,26 @@
 {
-  "name": "material-file-input",
-  "version": "0.0.1",
+  "name": "ash-material-file-input",
+  "version": "0.9.0",
+  "license": "MIT",
+  "author": {
+    "name": "Sylvain Febvre"
+  },
+  "description": "File input component with drop feature for Angular Material",
+  "homepage": "Not yet",
+  "keywords": ["angular", "material", "file", "input", "file-input", "mat-form-field", "drag", "drop"],
+  "bugs": {
+    "url": "https://github.com/Ashlook/ash-material-file-input/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ashlook/ash-material-file-input"
+  },
+  "dependencies": {},
   "peerDependencies": {
-    "@angular/common": "^9.0.7",
-    "@angular/core": "^9.0.7",
+    "@angular/common": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/cdk": "9.0.0",
+    "@angular/material": "9.0.0",
     "tslib": "^1.10.0"
   }
 }
