--- a/angular.json
+++ b/angular.json
@@ -3,46 +3,6 @@
   "version": 1, 
   "newProjectRoot": "projects",
   "projects": {
-    "material-file-input": {
-      "projectType": "library",
-      "root": "projects/material-file-input",
-      "sourceRoot": "projects/material-file-input/src",
-      "prefix": "lib",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
-          "options": {
-            "tsConfig": "projects/material-file-input/tsconfig.lib.json",
-            "project": "projects/material-file-input/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "projects/material-file-input/tsconfig.lib.prod.json"
-            }
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/material-file-input/src/test.ts",
-            "tsConfig": "projects/material-file-input/tsconfig.spec.json",
-            "karmaConfig": "projects/material-file-input/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/material-file-input/tsconfig.lib.json",
-              "projects/material-file-input/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
     "example": {
       "projectType": "application",
       "schematics": {
@@ -160,6 +120,46 @@
             "production": {
               "devServerTarget": "example:serve:production"
             }
+          }
+        }
+      }
+    },
+    "ash-material-file-input": {
+      "projectType": "library",
+      "root": "projects/ash-material-file-input",
+      "sourceRoot": "projects/ash-material-file-input/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ash-material-file-input/tsconfig.lib.json",
+            "project": "projects/ash-material-file-input/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ash-material-file-input/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ash-material-file-input/src/test.ts",
+            "tsConfig": "projects/ash-material-file-input/tsconfig.spec.json",
+            "karmaConfig": "projects/ash-material-file-input/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ash-material-file-input/tsconfig.lib.json",
+              "projects/ash-material-file-input/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
