--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ install:
   - npm install
 
 script:
-  - npm run test -- --watch=false --no-progress --browsers=Chrome
+  - npm run test -watch false --no-progress -browsers ChromeHeadless
