--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ node_js:
 
 addons:
   chrome: stable
-before_install:
 
 
 cache:
@@ -17,4 +16,5 @@ install:
   - npm install
 
 script:
-  - ng test --watch false --browsers ChromeHeadless
+  - ng lint
+  - ng test ash-material-file-input --watch false --browsers ChromeHeadless
