--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ node_js:
 addons:
   chrome: stable
 
-branches:
-  only:
-    - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+#branches:
+#  only:
+#    - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
 
 stages:
   - test
