--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ jobs:
         on:
           branch: master
           tags: true
-      - provider: release
+      - provider: releases
         skip_cleanup: true
         api_key: $GITHUB_TOKEN
         file_glob: true
