--- a/projects/ash-material-file-input/package.json
+++ b/projects/ash-material-file-input/package.json
@@ -6,7 +6,7 @@
     "name": "Sylvain Febvre"
   },
   "description": "File input component with drop feature for Angular Material",
-  "homepage": "Not yet",
+  "homepage": "https://ashlook.github.io/ash-material-file-input",
   "keywords": [
     "angular",
     "material",
