--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "ng test",
     "test:lib": "ng test ash-material-file-input --watch false --browsers ChromeHeadless  --code-coverage",
     "lint": "ng lint",
+    "lint:lib": "ng lint ash-material-file-input",
     "e2e": "ng e2e",
     "publish:lib": "npm publish dist/ash-material-file-input"
   },
