--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:lib": "ng build --prod ash-material-file-input",
+    "build:lib": "ng build ash-material-file-input  --prod",
     "build:example": "ng build example --prod --base-href /ash-material-file-input/",
     "test": "ng test",
     "test:lib": "ng test ash-material-file-input --watch false --browsers ChromeHeadless  --code-coverage",
